@@ -3,6 +3,7 @@ This this the changelog file for the Pothos Comms toolkit.
 Release 0.1.0 (pending)
 ==========================
 
+- Created templated Fast Fourier Transform block
 - Added verbose option to the frame sync to aid in debugging
 - Added DC removal block with moving average implementation
 - Moved windowing functions from the util toolkit to filter/
